Fixed minor layout issues

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,1 +1,3 @@
 label.error {font-size:12px;color:red}
+.news-container a {color: #272829;}
+.news-container p, .news-container h4 {text-align:left}
